2013-03-11  Brady Eidson  <beidson@apple.com>

        CoreIPC crash in NetworkProcess after WebProcess crash.
        <rdar://problem/13124146> and https://bugs.webkit.org/show_bug.cgi?id=112046

        Reviewed by Alexey Proskuryakov.

        * NetworkProcess/SchedulableLoader.cpp:
        (WebKit::SchedulableLoader::connectionToWebProcessDidClose): Don't null out the connection backpointer on crash.

2013-03-11  Alexey Proskuryakov  <ap@apple.com>

        Make it possible to reuse sandbox extensions
        https://bugs.webkit.org/show_bug.cgi?id=111883

        Reviewed by Anders Carlsson.

        This allows for properly keeping extensions in NetworkBlobRegistry for as long as
        they are needed.

        The patch also fixes a bug where extensions would leak when navigating between
        file:// pages.

        * NetworkProcess/SchedulableLoader.cpp:
        Revoke the extensions, but don't invalidate - we may need them later.

        * Shared/Downloads/Download.cpp:
        (WebKit::Download::didFinish):
        (WebKit::Download::didFail):
        (WebKit::Download::didCancel):
        Replaced invalidate() with revoke() and clearing out. SandboxExtension destructor
        now requires revocations wto be balanced, as otherwise understanding dual reference
        counting in SandboxExtension would be too difficult.

        * Shared/SandboxExtension.h: We now keep track of how many times the extension
        was consumed. Eventually, we should refactor the class to not have such duplicate
        reference counting.
        * Shared/mac/SandboxExtensionMac.mm:
        (WebKit::SandboxExtension::SandboxExtension): Initialize use count.
        (WebKit::SandboxExtension::~SandboxExtension): We now require consume/revoke calls
        to be balanced. This is not hard to do in existing usage, and makes the design much
        more reliable.
        (WebKit::SandboxExtension::revoke): Don't permanently destroy the extension when